compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__unapplied_record_constructors_typescript.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "pub type Cat { Cat(name: String) }\n\npub fn return_unapplied_cat() {\n  Cat\n}\n"
---
----- SOURCE CODE
pub type Cat { Cat(name: String) }

pub fn return_unapplied_cat() {
  Cat
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export class Cat extends _.CustomType {
  /** @deprecated */
  constructor(name: string);
  /** @deprecated */
  name: string;
}
export function Cat$Cat(name: string): Cat$;
export function Cat$isCat(value: any): value is Cat$;
export function Cat$Cat$0(value: Cat$): string;
export function Cat$Cat$name(value: Cat$): string;

export type Cat$ = Cat;

export function return_unapplied_cat(): (x0: string) => Cat$;
