compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__unqualified_constructor_as_value.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other.{Two}\npub fn main() {\n  Two\n}"
---
----- SOURCE CODE
import other.{Two}
pub fn main() {
  Two
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export function main() {
  return (var0, var1, var2) => { return new Two(var0, var1, var2); };
}
