compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__unqualified_imported_no_label.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other.{Two}\npub fn main() {\n  Two(1)\n}"
---
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export function main() {
  return new Two(1);
}
